shim/oxide_shim.h

struct wlr_output;
struct wlr_scene_tree;
struct wlr_layer_shell_v1;
struct wlr_layer_surface_v1;
struct wlr_scene_layer_surface_v1;
struct wlr_xdg_decoration_manager_v1;
struct wlr_output_power_manager_v1;
struct wlr_output_power_v1_set_mode_event;
struct wlr_renderer;
struct wlr_allocator;
struct oxide_listener;
// Generic event callback handed to Rust: (userdata, signal-data).
typedef void (*oxide_callback)(void *userdata, void *data);
// Pointer-grab callbacks (Mod+drag move/resize of floating windows).
// Button: called on press (with the clicked root surface, held modifiers and
// cursor position) and on release (root_surface NULL, modifiers 0); returning
// true consumes the event — a grab started or ended, don't forward it to the
// client. Motion: called with the cursor's layout position; returning true
// means a grab is active and handled the motion.
struct wlr_surface;
// Enable/disable the output's physical power state (DPMS on/off) — owns the
// wlr_output_state commit dance, same shape as oxide_output_enable but
// without touching mode/scale.
void oxide_output_set_powered(struct wlr_output *output, bool enabled);
// --- layer-shell (bars, panels, wallpaper) ----------------------------------
//
// Mirrors the xdg-shell wiring above: wlroots implements the protocol and a
// scene helper that does anchor/margin math and exclusive-zone bookkeeping;
// we expose that plus lifecycle listeners. Rust owns which tree (z-layer) and
// output each surface lands on.

// The zwlr_layer_shell_v1 global is created directly from Rust via bindgen's
// wlr_layer_shell_v1_create binding (same pattern as wlr_xdg_shell_create).
struct oxide_listener *oxide_layer_shell_add_new_surface(
        struct wlr_layer_shell_v1 *shell, oxide_callback callback, void *userdata);
// NULL if the client didn't request a specific output; Rust must assign one
// before returning from the new_surface handler.
struct wlr_output *oxide_layer_surface_output(struct wlr_layer_surface_v1 *ls);
void oxide_layer_surface_set_output(struct wlr_layer_surface_v1 *ls,
        struct wlr_output *output);
// Requested z-layer: 0=background, 1=bottom, 2=top, 3=overlay
// (zwlr_layer_shell_v1_layer).
uint32_t oxide_layer_surface_layer(struct wlr_layer_surface_v1 *ls);
// Add the layer surface (and its sub-surfaces/popups) to the scene, under the
// tree matching its layer.
struct wlr_scene_layer_surface_v1 *oxide_scene_layer_surface_create(
        struct wlr_scene_tree *tree, struct wlr_layer_surface_v1 *ls);
// Position/size the surface per its anchors+margins within the output box
// (fx,fy,fw,fh), and shrink the usable box (ux,uy,uw,uh, in/out) by its
// exclusive zone. Also sends the layer_surface.configure event to the client.
void oxide_scene_layer_surface_configure(struct wlr_scene_layer_surface_v1 *scene_ls,
        int fx, int fy, int fw, int fh, int *ux, int *uy, int *uw, int *uh);
// Lifecycle listeners on a layer surface (Rust drives arrange + tiling).
struct oxide_listener *oxide_layer_surface_add_commit(struct wlr_layer_surface_v1 *ls,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_layer_surface_add_map(struct wlr_layer_surface_v1 *ls,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_layer_surface_add_unmap(struct wlr_layer_surface_v1 *ls,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_layer_surface_add_destroy(struct wlr_layer_surface_v1 *ls,
        oxide_callback callback, void *userdata);
// --- xdg-decoration (server-side window decoration negotiation) ------------
//
// The manager global is created directly from Rust via bindgen's
// wlr_xdg_decoration_manager_v1_create binding (same pattern as
// wlr_xdg_shell_create) — no shim wrapper needed for a plain creation call.

struct oxide_listener *oxide_xdg_decoration_manager_add_new_toplevel_decoration(
        struct wlr_xdg_decoration_manager_v1 *manager, oxide_callback callback,
        void *userdata);
// Force server-side mode: the client stops drawing its own title bar/border.
// We draw nothing in its place (bare windows), so this is a one-shot,
// fire-and-forget call — no per-decoration state to track or clean up.
void oxide_xdg_toplevel_decoration_set_server_side(void *decoration);
// --- wlr-output-power-management-unstable-v1 --------------------------------
//
// wlroots implements the whole wire protocol (get_output_power, set_mode,
// the mode/failed events it echoes back) itself; we only react to its
// `set_mode` signal and actually flip the output via oxide_output_set_powered
// above. The manager global is created directly from Rust via bindgen's
// wlr_output_power_manager_v1_create binding (same pattern as
// wlr_layer_shell_v1_create) — no shim wrapper needed for a plain creation
// call.

struct oxide_listener *oxide_output_power_manager_add_set_mode(
        struct wlr_output_power_manager_v1 *manager,
        oxide_callback callback, void *userdata);
// Accessors for the set_mode event (`data` in the callback above).
struct wlr_output *oxide_output_power_set_mode_event_output(
        struct wlr_output_power_v1_set_mode_event *event);
// True for ZWLR_OUTPUT_POWER_V1_MODE_ON, false for ...MODE_OFF.
bool oxide_output_power_set_mode_event_is_on(
        struct wlr_output_power_v1_set_mode_event *event);
// --- rounded-corner GLES2 masking --------------------------------------------
//
// wlroots' scene/render-pass API has no corner-radius primitive; this compiles
// and owns a compositor-side GLES2 program used to mask a window's texture
// into a compositor-owned buffer (see shim/gles2_corner.c and
// src/toplevel.rs's handle_commit). Compiled once at startup; the opaque
// handle is threaded through as `void *` the same way other wlroots handles
// Rust never looks inside are (e.g. session-lock objects).

// NULL on failure (shader compile/link error) — caller should treat that as
// "corner-radius masking unavailable" rather than crash. Lives for the
// process's lifetime, same as the renderer/allocator it's built from — 0xin
// deliberately skips tearing down top-level wlroots globals on shutdown
// (see main.rs), so there is no paired destroy function.
void *oxide_gles2_corner_program_create(struct wlr_renderer *renderer);
// Renders `root_surface`'s current texture through the corner-radius shader
// into a compositor-owned GPU buffer, then swaps it into whichever
// `wlr_scene_buffer` under `scene_tree` is backed by that exact surface
// (never a popup/subsurface). `*swapchain_inout` is a per-toplevel
// `struct wlr_swapchain*` (opaque `void*` — NULL initially), recreated by
// this call whenever the surface's buffer size no longer matches
// `*swapchain_w_inout`/`*swapchain_h_inout`; the caller owns destroying it
// (`oxide_swapchain_destroy` below) when the window itself is destroyed.
// The destination display size restated on the scene buffer (required on a
// fractionally-scaled output, since this call's own buffer swap bypasses
// wlroots' client-viewport-driven auto-scaling) is `dst_w`/`dst_h` — 0xin's
// own tile size for this window, the same value its scene tree's clip box
// is set to, so the two can never disagree.
// Returns false (no-op) on any failure — masking is best-effort, never fatal.
bool oxide_toplevel_apply_corner_radius(struct wlr_renderer *renderer,
        struct wlr_allocator *allocator, void *corner_program,
        struct wlr_scene_tree *scene_tree, struct wlr_surface *root_surface,
        int radius, int dst_w, int dst_h, void **swapchain_inout,
        int *swapchain_w_inout, int *swapchain_h_inout);
// Free a per-toplevel corner_swapchain (a no-op if it was never created —
// NULL means the window was never masked). Call on window destroy.
void oxide_swapchain_destroy(void *swapchain);