src/ffi.rs


    // Layer-shell (bars, panels, wallpaper). Layer surfaces and the scene
    // helper wrapping them stay opaque `*mut c_void` in Rust, same as the
    // background rect above — we only ever pass them back into these helpers.
    pub(crate) fn oxide_layer_shell_add_new_surface(
        shell: *mut wlr::wlr_layer_shell_v1,
        callback: ShimCallback,
        userdata: *mut c_void,
    ) -> *mut ShimListener;
    pub(crate) fn oxide_layer_surface_output(ls: *mut c_void) -> *mut wlr::wlr_output;
    pub(crate) fn oxide_layer_surface_set_output(ls: *mut c_void, output: *mut wlr::wlr_output);
    pub(crate) fn oxide_layer_surface_layer(ls: *mut c_void) -> u32;
    pub(crate) fn oxide_scene_layer_surface_create(
        tree: *mut wlr::wlr_scene_tree,
        ls: *mut c_void,
    ) -> *mut c_void;
    pub(crate) fn oxide_scene_layer_surface_configure(
        scene_ls: *mut c_void,
        fx: i32,
        fy: i32,
        fw: i32,
        fh: i32,
        ux: *mut i32,
        uy: *mut i32,
        uw: *mut i32,
        uh: *mut i32,
    );
    pub(crate) fn oxide_layer_surface_add_commit(
        ls: *mut c_void,
        callback: ShimCallback,
        userdata: *mut c_void,
    ) -> *mut ShimListener;
    pub(crate) fn oxide_layer_surface_add_map(
        ls: *mut c_void,
        callback: ShimCallback,
        userdata: *mut c_void,
    ) -> *mut ShimListener;
    pub(crate) fn oxide_layer_surface_add_unmap(
        ls: *mut c_void,
        callback: ShimCallback,
        userdata: *mut c_void,
    ) -> *mut ShimListener;
    pub(crate) fn oxide_layer_surface_add_destroy(
        ls: *mut c_void,
        callback: ShimCallback,
        userdata: *mut c_void,
    ) -> *mut ShimListener;

    // xdg-decoration: force server-side mode so clients skip drawing their
    // own title bar. The decoration object stays opaque `*mut c_void`, same
    // treatment as the layer-shell surface above.
    pub(crate) fn oxide_xdg_decoration_manager_add_new_toplevel_decoration(
        manager: *mut wlr::wlr_xdg_decoration_manager_v1,
        callback: ShimCallback,
        userdata: *mut c_void,
    ) -> *mut ShimListener;
    pub(crate) fn oxide_xdg_toplevel_decoration_set_server_side(decoration: *mut c_void);

    // wlr-output-power-management-unstable-v1: wlroots owns the wire
    // protocol; we only react to `set_mode` and apply it via
    // oxide_output_set_powered.
    pub(crate) fn oxide_output_power_manager_add_set_mode(
        manager: *mut wlr::wlr_output_power_manager_v1,
        callback: ShimCallback,
        userdata: *mut c_void,
    ) -> *mut ShimListener;
    // `event` is the set_mode signal's data (opaque — never reached through
    // an allowlisted function signature, so bindgen never sees its type).
    pub(crate) fn oxide_output_power_set_mode_event_output(
        event: *mut c_void,
    ) -> *mut wlr::wlr_output;
    pub(crate) fn oxide_output_power_set_mode_event_is_on(event: *mut c_void) -> bool;
    pub(crate) fn oxide_output_set_powered(output: *mut wlr::wlr_output, enabled: bool);

    // Rounded-corner GLES2 masking: a compositor-owned shader program,
    // compiled once at startup, living for the process's lifetime (no
    // destroy — see oxide_shim.h). NULL on failure — treat as "unavailable".
    pub(crate) fn oxide_gles2_corner_program_create(
        renderer: *mut wlr::wlr_renderer,
    ) -> *mut c_void;
    // Best-effort: returns false and leaves the previous buffer in place on
    // any failure. `swapchain_inout`/`_w_inout`/`_h_inout` are the caller's
    // per-Toplevel corner_swapchain/_w/_h fields, updated in place.
    pub(crate) fn oxide_toplevel_apply_corner_radius(
        renderer: *mut wlr::wlr_renderer,
        allocator: *mut wlr::wlr_allocator,
        corner_program: *mut c_void,
        scene_tree: *mut wlr::wlr_scene_tree,
        root_surface: *mut c_void,
        radius: i32,
        dst_w: i32,
        dst_h: i32,
        swapchain_inout: *mut *mut c_void,
        swapchain_w_inout: *mut i32,
        swapchain_h_inout: *mut i32,
    ) -> bool;
    pub(crate) fn oxide_swapchain_destroy(swapchain: *mut c_void);
}
